--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -54,12 +54,12 @@
 
         <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            I'm White Hat Hacker. I like to develop Exploit. I specialize in IoT hacking and penetration testing. I try to strive a safer cyber world. So, I'm working for Company Samsung SDS.
+            I'm White Hat Hacker. I like to develop Exploit. I specialize in IoT hacking and penetration testing. I strive for a safer cyber world. So, I'm working for Company Samsung SDS.
         </p>
         
          <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            To hone my hacking skills, I engaged in the following activities: I participated in hacking competitions, achieving high ranks and advancing to the finals. (cce, 2017, 2019, 2020, 2023) (whitehat, 2017, 2019) (codegate, 2017, 2020).I also took part in bug bounties, discovering vulnerabilities in Windows programs. (CVE-2019-13157, CVE-2020-9751, CVE-2021-26618, KVE-2023-5060, KVE-2023-5460) Additionally, I performed IoT security checks at Samsung SDS. I wrote Browser and Android exploits for N-Day vulnerabilities.
+            To hone my hacking skills, I engaged in the following activities: I participated in hacking competitions, achieving high ranks and advancing to the finals. (cce, 2017, 2019, 2020, 2023) (whitehat, 2017, 2019) (codegate, 2017, 2020).I also took part in bug bounties, discovering vulnerabilities in Windows programs. (CVE-2019-13157, CVE-2020-9751, CVE-2021-26618, KVE-2023-5060, KVE-2023-5460) Additionally, I performed IoT security audits at Samsung SDS. I wrote Browser and Android exploits for N-Day vulnerabilities.
 
         </p>
 
@@ -307,7 +307,7 @@
             <div class="panel panel-default">
                 <div id="collapseOne" class="panel-collapse collapse in">
                     <div class="panel-body">
-                        <div style="font-size: 20px; font-weight: bold; color:#3B5998">Dyrandy <a href="https://dyrandy.github.io/about/" style="font-size: 13px; color:#999">Blog Link</a> </div>member of Null@Root, Huge Fan of “Kakao Friends”</br>
+                        <div style="font-size: 20px; font-weight: bold; color:#3B5998">Dyrandy <a href="https://dyrandy.github.io/about/" style="font-size: 13px; color:#999">Blog Link</a> </div>jihun8862@gmail.com, member of Null@Root, Huge Fan of “Kakao Friends”</br>
                     </div>
                 </div>
             </div>
